--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "dogs_api",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsnd --exit-child src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +13,12 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
-    "eslint": "^8.23.1"
+    "eslint": "^8.23.1",
+    "node-dev": "^7.4.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.3"
   }
 }
