--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^4.3.1",
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0",
     "uuid": "^9.0.0"
