--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsnd --exit-child src/server.ts",
-    "test": "vitest"
+    "test": "vitest watch"
   },
   "keywords": [],
   "author": "",
